--- a/gallery.html
+++ b/gallery.html
@@ -17,18 +17,29 @@
   <section class="category">
     <h2>🧱 Rage MC Season 2</h2>
     <div class="gallery">
+      <img src="screenshots/rage_mc_s2/cruzmcbase.png" alt="CruzMC Base">
+      <img src="screenshots/rage_mc_s2/itachibase.png" alt="Itachi Base">
       <img src="screenshots/rage_mc_s2/cherrybase.png" alt="Cherry Base">
       <img src="screenshots/rage_mc_s2/cherrybase2.png" alt="Cherry Base 2">
-      <img src="screenshots/rage_mc_s2/coolcave.png" alt="Cool Cave">
-      <img src="screenshots/rage_mc_s2/pvarena.png" alt="PvP Arena">
-      <img src="screenshots/rage_mc_s2/itachibase.png" alt="Itachi Base">
-      <img src="screenshots/rage_mc_s2/group2.png" alt="Group Photo">
-      <img src="screenshots/rage_mc_s2/mrjinwoo.png" alt="Mr Jinwoo">
-      <img src="screenshots/rage_mc_s2/mrjinwooironfarm.png" alt="Mr Jinwoo's Iron Farm">
-      <img src="screenshots/rage_mc_s2/lobby.png" alt="Lobby">
-      <img src="screenshots/rage_mc_s2/rizwamc.png" alt="RizwaMC">
-      <img src="screenshots/rage_mc_s2/cutejohnny.png" alt="Cute Johnny">
+      <img src="screenshots/rage_mc_s2/youtubersbase.png" alt="YouTubers Base">
       <img src="screenshots/rage_mc_s2/shop.png" alt="Shop">
+      <img src="screenshots/rage_mc_s2/spawn.png" alt="Spawn">
+      <img src="screenshots/rage_mc_s2/lobby.png" alt="Lobby">
+      <img src="screenshots/rage_mc_s2/pvparena.png" alt="PvP Arena">
+      <img src="screenshots/rage_mc_s2/darkvillage.png" alt="Dark Village">
+      <img src="screenshots/rage_mc_s2/coolcave.png" alt="Cool Cave">
+      <img src="screenshots/rage_mc_s2/ytgamer.png" alt="YT Gamer">
+      <img src="screenshots/rage_mc_s2/ytgamerbase.png" alt="YT Gamer Base">
+      <img src="screenshots/rage_mc_s2/cruzmc.png" alt="CruzMC">
+      <img src="screenshots/rage_mc_s2/mrjinwoo.png" alt="Mr Jinwoo">
+      <img src="screenshots/rage_mc_s2/mrjinwooironfarm.png" alt="Mr Jinwoo Iron Farm">
+      <img src="screenshots/rage_mc_s2/youtubersbase2.png" alt="YouTubers Base 2">
+      <img src="screenshots/rage_mc_s2/cutejohnny.png" alt="Cute Johnny">
+      <img src="screenshots/rage_mc_s2/rizwanmc.png" alt="RizwaMC">
+      <img src="screenshots/rage_mc_s2/itachi.png" alt="Itachi">
+      <img src="screenshots/rage_mc_s2/darksiva.png" alt="Dark Siva">
+      <img src="screenshots/rage_mc_s2/groupphoto1.png" alt="Group Photo 1">
+      <img src="screenshots/rage_mc_s2/group2.png" alt="Group Photo 2">
     </div>
   </section>
 </body>
