--- a/index.html
+++ b/index.html
@@ -73,11 +73,12 @@
       background: #e04848;
     }
 
-    /* Fix the typed cursor */
+    /* Cursor fix */
     .typed-cursor {
       color: #ff5b5b;
-      font-weight: bold;
-      font-size: 1.4rem;
+      font-weight: 700;
+      font-size: 2.2rem; /* Match the heading size */
+      line-height: 1;
       animation: blink 1s infinite;
     }
 
