--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
   <header class="page-header">
     <h1>📸 My Minecraft Photography</h1>
     <nav>
-      <a href="index.html">← Back to Home</a>
+      <a href="https://irungabhai.neonindustrics.dpdns.org">← Back to Home</a>
     </nav>
   </header>
 
