--- a/skins.html
+++ b/skins.html
@@ -89,7 +89,7 @@
     <!-- 🧠 Add skins below -->
     <div class="card">
       <canvas id="skin1"></canvas>
-      <h3>Cyber Ninja</h3>
+      <h3>Heroneon_GG</h3>
       <a class="download-btn" href="skins/Heroneon_GG.png" download>Download</a>
     </div>
     
