--- a/skins.html
+++ b/skins.html
@@ -90,7 +90,7 @@
     <div class="card">
       <canvas id="skin1"></canvas>
       <h3>Heroneon_GG</h3>
-      <a class="download-btn" href="skins/Heroneon_GG.png" download>Download</a>
+      <a class="download-btn" href="skins/heroneongg.png" download>Download</a>
     </div>
     
   <script>
