--- a/skins.html
+++ b/skins.html
@@ -2,115 +2,82 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Victor's Minecraft Skins</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet" />
   <script src="https://unpkg.com/skinview3d"></script>
   <style>
     body {
-      margin: 0;
-      background: #0f0f0f;
+      background-color: #0f0f0f;
+      color: white;
       font-family: 'Poppins', sans-serif;
-      color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
       padding: 2rem;
     }
 
     h1 {
-      text-align: center;
       color: #ff5b5b;
-      margin-bottom: 2rem;
     }
 
-    .nav {
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-
-    .nav a {
-      color: #ff5b5b;
-      text-decoration: none;
-      font-weight: 600;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 1.5rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .card {
+    .skin-card {
       background: #1a1a1a;
-      border-radius: 12px;
       padding: 1rem;
+      border-radius: 12px;
+      width: 300px;
       text-align: center;
-      box-shadow: 0 0 10px #00000066;
+      box-shadow: 0 0 10px #000;
     }
 
     canvas {
       width: 100%;
-      height: 250px;
+      height: 350px;
       background: #111;
       border-radius: 8px;
-      margin-bottom: 0.75rem;
     }
 
-    h3 {
-      margin: 0.5rem 0;
-      font-size: 1rem;
-    }
-
-    .download-btn {
-      background: #ff5b5b;
-      color: #fff;
-      padding: 0.5rem 1rem;
-      text-decoration: none;
-      border-radius: 6px;
-      font-size: 0.9rem;
+    a.download {
       display: inline-block;
-      transition: background 0.2s ease;
+      margin-top: 1rem;
+      background: #ff5b5b;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: 0.2s ease background;
     }
 
-    .download-btn:hover {
+    a.download:hover {
       background: #e04848;
     }
   </style>
 </head>
 <body>
 
-  <div class="nav">
-    <a href="index.html">← Back to Home</a>
-  </div>
-
   <h1>🎮 Victor's Minecraft Skins</h1>
 
-  <div class="grid">
-    <!-- 🧠 Add skins below -->
-    <div class="card">
-      <canvas id="skin1"></canvas>
-      <h3>Heroneon_GG</h3>
-      <a class="download-btn" href="skins/heroneongg.png" download>Download</a>
-    </div>
-    
+  <div class="skin-card">
+    <canvas id="viewer1"></canvas>
+    <h3> Heroneon_GG </h3>
+    <a class="download" href="skins/heroneongg.png" download>Download</a>
+  </div>
+
   <script>
-    function loadSkin(canvasId, skinPath) {
-      const canvas = document.getElementById(canvasId);
+    window.addEventListener("load", () => {
       const viewer = new skinview3d.SkinViewer({
-        canvas: canvas,
-        width: canvas.clientWidth,
-        height: 250,
-        skin: skinPath
+        canvas: document.getElementById("viewer1"),
+        width: 300,
+        height: 350,
+        skin: "skins/cyber_ninja.png" // Make sure this path is correct
       });
 
-      viewer.controls.enableZoom = false;
-      viewer.animation = new skinview3d.RotatingAnimation();
-      viewer.animation.speed = 1;
-    }
+      viewer.controls.enableZoom = true;
+      viewer.controls.enableRotate = true;
 
-    loadSkin("skin1", "skins/cyber_ninja.png");
-    loadSkin("skin2", "skins/demon_warrior.png");
-    loadSkin("skin3", "skins/shadow_steve.png");
+      const animation = new skinview3d.RotatingAnimation();
+      animation.speed = 1;
+      viewer.animation = animation;
+    });
   </script>
 
 </body>
