--- a/skins.html
+++ b/skins.html
@@ -2,83 +2,111 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Victor's Minecraft Skins</title>
-  <script src="https://unpkg.com/skinview3d"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet" />
   <style>
     body {
-      background-color: #0f0f0f;
-      color: white;
+      margin: 0;
+      background: #0f0f0f;
       font-family: 'Poppins', sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+      color: #fff;
       padding: 2rem;
     }
 
     h1 {
-      color: #ff5b5b;
-    }
-
-    .skin-card {
-      background: #1a1a1a;
-      padding: 1rem;
-      border-radius: 12px;
-      width: 300px;
       text-align: center;
-      box-shadow: 0 0 10px #000;
+      color: #ff5b5b;
+      margin-bottom: 2rem;
     }
 
-    canvas {
+    .nav {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
+    .nav a {
+      color: #ff5b5b;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 1.5rem;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .card {
+      background: #1a1a1a;
+      border-radius: 12px;
+      padding: 1rem;
+      text-align: center;
+      box-shadow: 0 0 10px #00000066;
+    }
+
+    .card iframe {
       width: 100%;
-      height: 350px;
+      height: 320px;
+      border: none;
       background: #111;
       border-radius: 8px;
+      margin-bottom: 0.75rem;
     }
 
-    a.download {
-      display: inline-block;
-      margin-top: 1rem;
+    h3 {
+      margin: 0.5rem 0;
+      font-size: 1rem;
+    }
+
+    .download-btn {
       background: #ff5b5b;
-      color: white;
+      color: #fff;
       padding: 0.5rem 1rem;
-      border-radius: 6px;
       text-decoration: none;
-      transition: 0.2s ease background;
+      border-radius: 6px;
+      font-size: 0.9rem;
+      display: inline-block;
+      transition: background 0.2s ease;
     }
 
-    a.download:hover {
+    .download-btn:hover {
       background: #e04848;
     }
   </style>
 </head>
 <body>
 
-  <h1>🎮 Victor's Minecraft Skins</h1>
-
-  <div class="skin-card">
-    <canvas id="viewer1"></canvas>
-    <h3> Heroneon_GG </h3>
-    <a class="download" href="skins/heroneongg.png" download>Download</a>
+  <div class="nav">
+    <a href="index.html">← Back to Home</a>
   </div>
 
-  <script>
-    window.addEventListener("load", () => {
-      const viewer = new skinview3d.SkinViewer({
-        canvas: document.getElementById("viewer1"),
-        width: 300,
-        height: 350,
-        skin: "skins/cyber_ninja.png" // Make sure this path is correct
-      });
+  <h1>🎮 Victor's Minecraft Skins</h1>
 
-      viewer.controls.enableZoom = true;
-      viewer.controls.enableRotate = true;
+  <div class="grid">
+    <!-- Skin 1 -->
+    <div class="card">
+      <iframe src="https://minecraftskinviewer.netlify.app/?skin=skins/heroneongg.png" allowfullscreen></iframe>
+      <h3>Heroneon_GG</h3>
+      <a class="download-btn" href="skins/heroneongg.png" download>Download</a>
+    </div>
 
-      const animation = new skinview3d.RotatingAnimation();
-      animation.speed = 1;
-      viewer.animation = animation;
-    });
-  </script>
+    <!-- Skin 2 -->
+    <div class="card">
+      <iframe src="https://minecraftskinviewer.netlify.app/?skin=skins/demon_warrior.png" allowfullscreen></iframe>
+      <h3>Demon Warrior</h3>
+      <a class="download-btn" href="skins/demon_warrior.png" download>Download</a>
+    </div>
+
+    <!-- Skin 3 -->
+    <div class="card">
+      <iframe src="https://minecraftskinviewer.netlify.app/?skin=skins/shadow_steve.png" allowfullscreen></iframe>
+      <h3>Shadow Steve</h3>
+      <a class="download-btn" href="skins/shadow_steve.png" download>Download</a>
+    </div>
+  </div>
 
 </body>
 </html>
