--- a/skins.html
+++ b/skins.html
@@ -1,112 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Victor's Minecraft Skins</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <title>Minecraft Skin Viewer</title>
+  <script src="https://unpkg.com/skinview3d"></script>
   <style>
     body {
-      margin: 0;
       background: #0f0f0f;
+      color: white;
       font-family: 'Poppins', sans-serif;
-      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       padding: 2rem;
     }
 
-    h1 {
-      text-align: center;
-      color: #ff5b5b;
-      margin-bottom: 2rem;
-    }
-
-    .nav {
-      text-align: center;
-      margin-bottom: 2rem;
-    }
-
-    .nav a {
-      color: #ff5b5b;
-      text-decoration: none;
-      font-weight: 600;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
-      gap: 1.5rem;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .card {
+    .skin-card {
       background: #1a1a1a;
       border-radius: 12px;
       padding: 1rem;
-      text-align: center;
+      margin: 1rem;
       box-shadow: 0 0 10px #00000066;
+      width: 300px;
     }
 
-    .card iframe {
+    canvas {
       width: 100%;
-      height: 320px;
-      border: none;
-      background: #111;
+      height: 300px;
+      display: block;
       border-radius: 8px;
-      margin-bottom: 0.75rem;
     }
 
-    h3 {
-      margin: 0.5rem 0;
-      font-size: 1rem;
+    .name {
+      margin-top: 0.75rem;
+      font-weight: bold;
+      text-align: center;
     }
 
     .download-btn {
+      margin-top: 0.5rem;
+      display: block;
+      text-align: center;
       background: #ff5b5b;
-      color: #fff;
-      padding: 0.5rem 1rem;
+      color: white;
       text-decoration: none;
+      padding: 0.5rem 1rem;
       border-radius: 6px;
-      font-size: 0.9rem;
-      display: inline-block;
-      transition: background 0.2s ease;
-    }
-
-    .download-btn:hover {
-      background: #e04848;
     }
   </style>
 </head>
 <body>
 
-  <div class="nav">
-    <a href="index.html">← Back to Home</a>
+  <h1>Victor's Minecraft Skins (Local 3D)</h1>
+
+  <div class="skin-card">
+    <canvas id="skinCanvas1"></canvas>
+    <div class="name">Heroneon_GG</div>
+    <a href="skins/heroneon_gg.png" download class="download-btn">Download</a>
   </div>
 
-  <h1>🎮 Victor's Minecraft Skins</h1>
+  <script>
+    const viewer = new skinview3d.SkinViewer({
+      canvas: document.getElementById("skinCanvas1"),
+      width: 300,
+      height: 300,
+      skin: "skins/heroneongg.png"
+    });
 
-  <div class="grid">
-    <!-- Skin 1 -->
-    <div class="card">
-      <iframe src="https://minecraftskinviewer.netlify.app/?skin=skins/heroneongg.png" allowfullscreen></iframe>
-      <h3>Heroneon_GG</h3>
-      <a class="download-btn" href="skins/heroneongg.png" download>Download</a>
-    </div>
-
-    <!-- Skin 2 -->
-    <div class="card">
-      <iframe src="https://minecraftskinviewer.netlify.app/?skin=skins/demon_warrior.png" allowfullscreen></iframe>
-      <h3>Demon Warrior</h3>
-      <a class="download-btn" href="skins/demon_warrior.png" download>Download</a>
-    </div>
-
-    <!-- Skin 3 -->
-    <div class="card">
-      <iframe src="https://minecraftskinviewer.netlify.app/?skin=skins/shadow_steve.png" allowfullscreen></iframe>
-      <h3>Shadow Steve</h3>
-      <a class="download-btn" href="skins/shadow_steve.png" download>Download</a>
-    </div>
-  </div>
+    viewer.controls.enableZoom = true;
+    viewer.controls.enableRotate = true;
+    viewer.animation = new skinview3d.WalkingAnimation();
+    viewer.animation.speed = 1;
+    viewer.animation.play();
+  </script>
 
 </body>
 </html>
