--- a/skins.html
+++ b/skins.html
@@ -1,67 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Minecraft Skin Viewer</title>
+  <meta charset="UTF-8" />
+  <title>Test Skin</title>
   <script src="https://unpkg.com/skinview3d"></script>
   <style>
     body {
       background: #0f0f0f;
       color: white;
-      font-family: 'Poppins', sans-serif;
+      font-family: sans-serif;
       display: flex;
-      flex-direction: column;
+      justify-content: center;
       align-items: center;
-      padding: 2rem;
-    }
-
-    .skin-card {
-      background: #1a1a1a;
-      border-radius: 12px;
-      padding: 1rem;
-      margin: 1rem;
-      box-shadow: 0 0 10px #00000066;
-      width: 300px;
+      height: 100vh;
     }
 
     canvas {
-      width: 100%;
-      height: 300px;
-      display: block;
-      border-radius: 8px;
-    }
-
-    .name {
-      margin-top: 0.75rem;
-      font-weight: bold;
-      text-align: center;
-    }
-
-    .download-btn {
-      margin-top: 0.5rem;
-      display: block;
-      text-align: center;
-      background: #ff5b5b;
-      color: white;
-      text-decoration: none;
-      padding: 0.5rem 1rem;
-      border-radius: 6px;
+      background: #111;
+      border-radius: 10px;
     }
   </style>
 </head>
 <body>
-
-  <h1>Victor's Minecraft Skins (Local 3D)</h1>
-
-  <div class="skin-card">
-    <canvas id="skinCanvas1"></canvas>
-    <div class="name">Heroneon_GG</div>
-    <a href="skins/heroneon_gg.png" download class="download-btn">Download</a>
-  </div>
+  <canvas id="skinCanvas" width="300" height="300"></canvas>
 
   <script>
     const viewer = new skinview3d.SkinViewer({
-      canvas: document.getElementById("skinCanvas1"),
+      canvas: document.getElementById("skinCanvas"),
       width: 300,
       height: 300,
       skin: "skins/heroneongg.png"
@@ -69,10 +34,9 @@
 
     viewer.controls.enableZoom = true;
     viewer.controls.enableRotate = true;
-    viewer.animation = new skinview3d.WalkingAnimation();
+    viewer.animation = new skinview3d.RotatingAnimation();
     viewer.animation.speed = 1;
     viewer.animation.play();
   </script>
-
 </body>
 </html>
