--- a/skins.html
+++ b/skins.html
@@ -72,7 +72,7 @@
 </head>
 <body>
 
-  <h1> Victor's Minecraft Skins</h1>
+  <h1>🎮 Victor's Minecraft Skins</h1>
 
   <button class="upload-btn" onclick="document.getElementById('skinFile').click()">+ Upload</button>
   <input type="file" id="skinFile" accept=".png">
